# 0install

./: .travis-build.sh  .travis-extra-deps.sh  README.md  opam
.github/workflows/: mac.yml
ocaml/: cli.ml  generic_select.ml  gui_gtk.mlpack  slave.ml  update.ml
ocaml/gui_gtk/: add_box.ml  app_list_box.ml  bug_report_box.ml  cache_explorer_box.ml  component_box.ml  component_tree.ml  gui_gtk_plugin.ml  gui_progress.ml  solver_box.ml
ocaml/support/: gpg.ml
ocaml/tests/: fake_system.ml  test_distro.ml  test_download.ml  test_driver.ml  test_feed_cache.ml  test_fetch.ml  test_packagekit.ml
ocaml/zeroinstall/: apps.ml  config.ml  console.ml  default_ui.ml  default_ui.mli  downloader.ml  downloader.mli  dune  fetch.ml  general.ml  gui.ml  gui.mli  http.cohttp.ml  packagekit.ml  packagekit.mli  progress.mli  stores.ml  ui.mli
zeroinstall/0launch-gui/: gui.py  iface_browser.py  main.py  utils.py
zeroinstall/injector/: fetch.py  policy.py
